2010-04-24  Eli Zaretskii  <eliz@gnu.org>

	* .gdbinit: Add a "set Fmake_symbol" line to force GDB to load the
	definition of "struct Lisp_Symbol".

2010-04-23  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (pop_it): When the stack is popped after displaying
	from a string, bidi-iterate to exit from the text portion covered
	by the `display' property or overlay.  (Bug#5988, bug#5920)
	(set_iterator_to_next, next_element_from_composition): Fix display
	of composed characters from L2R scripts in bidi buffers.
	(Bug#5977)

2010-04-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/netbsd.h (LD_SWITCH_SYSTEM_TEMACS): Remove, configure sets nocombreloc.
	* s/openbsd.h (LD_SWITCH_SYSTEM_TEMACS): Remove.

	Simplify STARTFILES definition.
	* s/hpux10-20.h (START_FILES): Explicitly define here instead of
	relying on Makefile.in to define it.
	* s/cygwin.h (START_FILES): Likewise.
	* Makefile.in (STARTFILES): Remove conditional code, not needed anymore.

	Clean up Solaris code.
	* s/sol2-6.h (LD_SWITCH_SYSTEM_TEMACS, C_SWITCH_X_SYSTEM)
	(LIB_MOTIF): Remove, configure takes care of this.
	(NOT_USING_MOTIF): Remove, unused.
	* xrdb.c: Remove #if 0-ed #include.
	(SYSV): Remove conditional for old SysV.
	* sysdep.c (closedir): Remove conditional code for Solaris,
	Solaris has closedir.

2010-04-22  Jan Djärv  <jan.h.d@swipnet.se>

	* xsettings.c (read_and_apply_settings): Check if current_font is
	NULL before strcmp (Bug#6001).

2010-04-21  Dan Nicolaescu  <dann@ics.uci.edu>

	Clean up HP-UX files.
	* m/hp800.h (NO_REMAP, VIRT_ADDR_VARIES, DATA_SEG_BITS)
	(DATA_START, TEXT_START, LOAD_AVE_TYPE, LOAD_AVE_CVT)
	(LDAV_SYMBOL, index, rindex): Move definitions only used in HP-UX ...
	* s/hpux10-20.h: ... to the only user, here.

2010-04-21  Eli Zaretskii  <eliz@gnu.org>

	* bidi.c (bidi_find_paragraph_start, bidi_at_paragraph_end): Don't
	use buffer-local values of paragraph-start and paragraph-separate.
	<paragraph_start_re, paragraph_separate_re>: Rename from