@@ -1,5 +1,10 @@
 2010-04-24  Eli Zaretskii  <eliz@gnu.org>
 
+	* xdisp.c (display_line): Use `reseat' instead of `reseat_1', and
+	use `get_next_display_element' and `set_iterator_to_next' to
+	advance to the next character, when looking for the character that
+	begins the next row.
+
 	* .gdbinit: Add a "set Fmake_symbol" line to force GDB to load the
 	definition of "struct Lisp_Symbol".
 
